# yocaml

./: .gitignore  .gitlab-ci.yml  .ocamlformat  .ocamlformat-ignore  CHANGE.md  CHANGES.md  LICENSE  Makefile  README.md  dune-project  import-doc.sh  wordpress.opam  yocaml.opam  yocaml_cmark.opam  yocaml_cmarkit.opam  yocaml_eio.opam  yocaml_git.opam  yocaml_irmin.opam  yocaml_jingoo.opam  yocaml_liquid.opam  yocaml_markdown.opam  yocaml_mustache.opam  yocaml_omd.opam  yocaml_otoml.opam  yocaml_runtime.opam  yocaml_syndication.opam  yocaml_unix.opam  yocaml_yaml.opam
.github/workflows/: deploy.yml  doc.yml  test.yml
doc/: data_validation.mld  dune  effect.mld  index.html  index.mld  introduction.mld  key_concepts.mld  mdx_prelude.ml  simple_blog.mld
doc/wordpress/: index.html
doc/yocaml/: index.html
doc/yocaml_unix/: index.html
examples/05_first_blog_using_jingoo/: index.md
examples/06_first_blog_using_jingoo_and_git/: index.md
examples/08_serving_files/: index.md
examples/d2/: README.md  d2.ml  d2.mli  dune
examples/d2-eio/: README.md
examples/d2-unix/: README.md
examples/simple-blog/: README.md  dune  index.md  simple_blog.ml  simple_blog.mli
examples/simple-blog-eio/: README.md
examples/simple-blog-git/: README.md
examples/simple-blog-unix/: README.md
examples/simple_blog/: Makefile  article.html  dune  index.html  layout.html  site.ml
examples/simple_static_website/: site.ml
examples/simple_static_website_using_omd/: site.ml
examples/webring/: README.md  dune  webring.ml
examples/webring-eio/: README.md  members.yml
examples/webring-unix/: README.md  index.md
lib/: action.ml  action.mli  aliases.mli  archetype.ml  archetype.mli  build.ml  build.mli  cache.ml  cache.mli  cmd.mli  csexp.ml  csexp.mli  data.ml  data.mli  deps.ml  deps.mli  diagnostic.ml  diagnostic.mli  dune  eff.ml  eff.mli  effect.ml  effect.mli  error.ml  error.mli  generator.ml  generator.mli  index.mld  lexicon.ml  lexicon.mli  metadata.ml  metadata.mli  nel.mli  path.ml  path.mli  pipeline.ml  pipeline.mli  required.mli  runtime.ml  runtime.mli  (+11 more)
lib/core/: action.ml  action.mli  archetype.ml  archetype.mli  batch.ml  batch.mli  cache.ml  cache.mli  cmd.ml  cmd.mli  data.ml  data.mli  deps.ml  deps.mli  diagnostic.ml  diagnostic.mli  dune  eff.ml  eff.mli  lexicon.ml  lexicon.mli  make.ml  make.mli  markup.ml  markup.mli  metadata.ml  metadata.mli  nel.ml  nel.mli  path.ml  path.mli  pipeline.ml  pipeline.mli  reader.ml  reader.mli  required.mli  runtime.ml  sexp.ml  sexp.mli  sexp_provider.ml  (+9 more)
lib/runtime/: dune  error.ml  error.mli  hash.ml  hash.mli  log.ml  log.mli  server.ml  server.mli  yocaml_runtime.ml  yocaml_runtime.mli
lib/yocaml/: aliases.mli  build.ml  build.mli  date.ml  date.mli  deps.ml  deps.mli  dune  effect.ml  effect.mli  error.ml  error.mli  filepath.ml  filepath.mli  generator.ml  generator.mli  index.mld  key_value.ml  key_value.mli  languages.ml  languages.mli  lexicon.ml  lexicon.mli  log.ml  log.mli  metadata.ml  metadata.mli  mime.ml  mime.mli  rss.ml  rss.mli  runtime.ml  runtime.mli  try.ml  try.mli  util.ml  util.mli  validate.ml  validate.mli  yocaml.ml  (+1 more)
lib/yocaml_cmark/: dune  yocaml_cmark.ml  yocaml_cmark.mli
lib/yocaml_git/: dune  runtime.ml  runtime.mli  yocaml_git.ml  yocaml_git.mli
lib/yocaml_irmin/: dune  runtime.ml  runtime.mli  yocaml_irmin.ml  yocaml_irmin.mli
lib/yocaml_jingoo/: dune  yocaml_jingoo.ml  yocaml_jingoo.mli
lib/yocaml_markdown/: dune  yocaml_markdown.ml  yocaml_markdown.mli
lib/yocaml_mustache/: dune  yocaml_mustache.ml  yocaml_mustache.mli
lib/yocaml_syndication/: dune  yocaml_syndication.ml  yocaml_syndication.mli
lib/yocaml_unix/: dune  runtime.ml  runtime.mli  server.ml  yocaml_unix.ml  yocaml_unix.mli
lib/yocaml_yaml/: dune  yocaml_yaml.ml  yocaml_yaml.mli
plugins/yocaml_cmarkit/: dune  yocaml_cmarkit.ml  yocaml_cmarkit.mli
plugins/yocaml_eio/: dune  runner.ml  runner.mli  runtime.ml  server.ml  server.mli  yocaml_eio.ml  yocaml_eio.mli
plugins/yocaml_git/: dune  required.mli  runtime.ml  runtime.mli  ssh.ml  ssh.mli  yocaml_git.ml  yocaml_git.mli
plugins/yocaml_jingoo/: dune  yocaml_jingoo.ml  yocaml_jingoo.mli
plugins/yocaml_liquid/: dune  yocaml_liquid.ml  yocaml_liquid.mli
plugins/yocaml_markdown/: dune  yocaml_markdown.ml  yocaml_markdown.mli
plugins/yocaml_mustache/: dune  yocaml_mustache.ml  yocaml_mustache.mli
plugins/yocaml_omd/: dune  yocaml_omd.ml  yocaml_omd.mli
plugins/yocaml_otoml/: dune  yocaml_otoml.ml  yocaml_otoml.mli
plugins/yocaml_syndication/: atom.ml  atom.mli  category.ml  category.mli  datetime.ml  datetime.mli  dune  generator.ml  generator.mli  lang.ml  lang.mli  media_type.ml  media_type.mli  opml.ml  opml.mli  person.ml  person.mli  rss1.ml  rss1.mli  rss2.ml  rss2.mli  text_input.ml  text_input.mli  tz.ml  tz.mli  xml.ml  xml.mli  yocaml_syndication.ml  yocaml_syndication.mli
plugins/yocaml_unix/: dune  runtime.ml  runtime.mli  server.ml  server.mli  yocaml_unix.ml  yocaml_unix.mli
plugins/yocaml_yaml/: dune  yocaml_yaml.ml  yocaml_yaml.mli
test/e2e/: dune  eio_server_metadata.t  eio_server_parsing.t  eio_server_validation.t  parsing_error.t  required_metadata.t  run.t  server_parsing_error.t  server_required_metadata.t  server_validation_error.t  unix_server_metadata.t  unix_server_parsing.t  unix_server_validation.t  validation_error.t
test/e2e/_www/: .cache  style.css
test/e2e/_www/articles/: first_article.html
test/e2e/_www/articles-with-applicative-read/: second_article.html
test/e2e/_www/liquid-articles/: first_article.html  second_article.html
test/e2e/content/: first_article.md  second_article.md
test/e2e/content/templates/: article.html  article.liquid  index.liquid  layout.html  layout.liquid
test/e2e/content_pp_errors/: parsing_error.md  required_metadata.md  validation_error.md
test/e2e/examples/write_files/: dune  run.t
test/lib/: dune  (+8 more)
tests/: build_test.ml  common_test.ml  date_test.ml  deps_test.ml  dummy.ml  dune  key_value_test.ml  metadata_test.ml  util_test.ml  wordpress_test.ml  yocaml_test.ml
(+302 files in other folders)
