opam-version: "2.0"
version: "dev"
synopsis: "YOCaml It is a static site generator, mostly written in OCaml"
maintainer: "xhtmlboi@gmail.com"
authors: [ "The XHTMLBoy <xhtmlboi@gmail.com>" ]

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

license: "GPL-3.0-or-later"
tags: [ "shell" "bin" "make" "static" "blog" "generator" ]
homepage: "https://github.com/xhtmlboi/yocaml"
dev-repo: "git://github.com/xhtmlboi/yocaml.git"
bug-reports: "https://github.com/xhtmlboi/yocaml/issues"
    
depends: [
  "ocaml" { >= "4.11.1" }
  "dune" { >= "2.8" }
  "odoc" {with-doc}
  "alcotest" {with-test}
  "preface" {pinned}
  "omd"
  "mustache"
  "yaml"
]

pin-depends: [
  ["preface.dev" "git+https://github.com/xvw/preface.git"]
]
