opam-version: "2.0"
version: "dev"
synopsis: "Deal with Jingoo in YOCaml"
maintainer: "xhtmlboi@gmail.com"
authors: [
  "The XHTMLBoy <xhtmlboi@gmail.com>"
  "Pierre Ruyter <grimfw@gmail.com>"
]

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

license: "GPL-3.0-or-later"
tags: [ "shell" "bin" "make" "static" "blog" "generator" ]
homepage: "https://github.com/xhtmlboi/yocaml"
dev-repo: "git+https://github.com/xhtmlboi/yocaml.git"
bug-reports: "https://github.com/xhtmlboi/yocaml/issues"

depends: [
  "ocaml" { >= "4.14.0" }
  "dune" { >= "2.8" }
  "odoc" {with-doc}
  "preface" { >= "1.0.0"}
  "jingoo" { >= "1.4.3" }
  "yocaml" {= version}
]
