(cram
 ;; In order to not make the OPAM CI
 (enabled_if
  (<> %{profile} release))
 (applies_to :whole_subtree)
 (deps
  (package yocaml)
  (package yocaml_unix)
  (package yocaml_yaml)
  (package yocaml_jingoo)
  (package yocaml_cmarkit)
  (package yocaml_liquid)
  %{exe:bin/gen.exe}
  %{exe:bin/gen_liquid.exe}
  %{exe:bin/gen_residuals.exe}
  %{exe:bin/gen_pp_errors.exe}
  %{exe:bin/unix_server_error.exe}
  %{exe:bin/eio_server_error.exe}
  (source_tree residuals)
  (source_tree residuals_build)
  (source_tree content)
  (source_tree content_pp_errors)))
